--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-14 11:18+0800\n"
+"POT-Creation-Date: 2022-11-17 09:45+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -609,6 +609,9 @@ msgstr "Vulling"
 msgid "Support"
 msgstr "Support"
 
+msgid "Flush options"
+msgstr "Flush-opties"
+
 msgid "Speed"
 msgstr "Snelheid"
 
@@ -1119,6 +1122,9 @@ msgstr "Meer"
 msgid "Open Preferences."
 msgstr ""
 
+msgid "Open next tip."
+msgstr ""
+
 msgid "Open Documentation in web browser."
 msgstr ""
 
@@ -1498,6 +1504,9 @@ msgstr "De invoerwaarde moet groter zijn dan %1% en kleiner dan %2%"
 
 msgid "SN"
 msgstr "SN"
+
+msgid "Setting AMS slot information while printing is not supported"
+msgstr ""
 
 msgid "Confirm"
 msgstr "Bevestigen"
@@ -2492,15 +2501,15 @@ msgstr "Installatiewizard"
 msgid "Show Configuration Folder"
 msgstr "Toon de configuratie map"
 
+msgid "Show Tip of the Day"
+msgstr ""
+
 msgid "Check for Update"
 msgstr "Zoeken naar updates"
 
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&Over %s"
-
-msgid "Show Tip of the Day"
-msgstr ""
 
 msgid "Open Network Test"
 msgstr ""
@@ -2912,7 +2921,7 @@ msgstr ""
 msgid "No printers."
 msgstr "Geen printers"
 
-msgid "Not supported."
+msgid "Not supported by this model of printer!"
 msgstr ""
 
 msgid "Connecting..."
@@ -2927,6 +2936,12 @@ msgstr "Bestandslijst laden..."
 
 msgid "No files"
 msgstr "Geen bestanden"
+
+msgid "Not accessible in LAN-only mode!"
+msgstr ""
+
+msgid "Missing LAN ip of printer!"
+msgstr ""
 
 #, c-format, boost-format
 msgid "File '%s' was lost! Please download it again."
@@ -3028,6 +3043,9 @@ msgstr ""
 
 msgid "Downloading..."
 msgstr "Downloaden..."
+
+msgid "Cloud Slicing..."
+msgstr ""
 
 msgid ""
 "Cannot read filament info: the filament is loaded to the tool head,please "
@@ -3251,13 +3269,24 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Onderste"
 
-msgid "Spaghetti and Excess Chute Pileup Detection"
+msgid "Enable AI monitoring of printing"
 msgstr ""
 
-msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
+msgid "Sensitivity of pausing is"
+msgstr ""
+
+msgid "Enable detection of build plate position"
+msgstr ""
+
+msgid ""
+"The localization tag of build plate is detected, and printing is paused if "
+"the tag is not in predefined range."
 msgstr ""
 
 msgid "First Layer Inspection"
+msgstr ""
+
+msgid "Auto-recovery from step loss"
 msgstr ""
 
 msgid "Switch to per-object setting mode to edit modifier settings."
@@ -3332,7 +3361,7 @@ msgstr ""
 msgid "Remove last filament"
 msgstr ""
 
-msgid "Sync material list from AMS"
+msgid "Synchronize filament list from AMS"
 msgstr ""
 
 msgid "Set filaments to use"
@@ -4289,9 +4318,6 @@ msgstr "Support filament"
 
 msgid "Prime tower"
 msgstr "Prime toren"
-
-msgid "Flush options"
-msgstr "Flush-opties"
 
 msgid "Special mode"
 msgstr "Speciale modus"
@@ -7639,6 +7665,26 @@ msgid ""
 "Set parameters for multiple objects\n"
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Stack objects]
+msgid ""
+"Stack objects\n"
+"Did you know that you can stack objects as a whole one?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Flush into support/objects/infill]
+msgid ""
+"Flush into support/objects/infill\n"
+"Did you know that you can save the wasted filament by flushing them into "
+"support/objects/infill during filament change?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Improve strength]
+msgid ""
+"Improve strength\n"
+"Did you know that you can use more wall loops and higher sparse infill "
+"density to improve the strength of the model?"
 msgstr ""
 
 #~ msgid "Filament N XX"
