--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-14 11:18+0800\n"
+"POT-Creation-Date: 2022-11-17 09:45+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -605,6 +605,9 @@ msgstr "Ifyllnad"
 msgid "Support"
 msgstr "Support"
 
+msgid "Flush options"
+msgstr "Rensnings alternativ"
+
 msgid "Speed"
 msgstr "Hastighet"
 
@@ -1104,6 +1107,9 @@ msgstr "Mer"
 msgid "Open Preferences."
 msgstr ""
 
+msgid "Open next tip."
+msgstr ""
+
 msgid "Open Documentation in web browser."
 msgstr ""
 
@@ -1479,6 +1485,9 @@ msgstr "Inmatningsvärdet ska vara större än %1% och mindre än %2%"
 
 msgid "SN"
 msgstr "SN"
+
+msgid "Setting AMS slot information while printing is not supported"
+msgstr ""
 
 msgid "Confirm"
 msgstr "Acceptera"
@@ -2462,15 +2471,15 @@ msgstr "Installationsguide"
 msgid "Show Configuration Folder"
 msgstr "Visa Konfigurations Mapp"
 
+msgid "Show Tip of the Day"
+msgstr ""
+
 msgid "Check for Update"
 msgstr "Sök efter Uppdatering"
 
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&Om %s"
-
-msgid "Show Tip of the Day"
-msgstr ""
 
 msgid "Open Network Test"
 msgstr ""
@@ -2882,7 +2891,7 @@ msgstr ""
 msgid "No printers."
 msgstr "Ingen printer."
 
-msgid "Not supported."
+msgid "Not supported by this model of printer!"
 msgstr ""
 
 msgid "Connecting..."
@@ -2897,6 +2906,12 @@ msgstr "Laddar fil lista..."
 
 msgid "No files"
 msgstr "Inga filer"
+
+msgid "Not accessible in LAN-only mode!"
+msgstr ""
+
+msgid "Missing LAN ip of printer!"
+msgstr ""
 
 #, c-format, boost-format
 msgid "File '%s' was lost! Please download it again."
@@ -2998,6 +3013,9 @@ msgstr ""
 
 msgid "Downloading..."
 msgstr "Laddar ner..."
+
+msgid "Cloud Slicing..."
+msgstr ""
 
 msgid ""
 "Cannot read filament info: the filament is loaded to the tool head,please "
@@ -3212,13 +3230,24 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Bottenlager"
 
-msgid "Spaghetti and Excess Chute Pileup Detection"
+msgid "Enable AI monitoring of printing"
 msgstr ""
 
-msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
+msgid "Sensitivity of pausing is"
+msgstr ""
+
+msgid "Enable detection of build plate position"
+msgstr ""
+
+msgid ""
+"The localization tag of build plate is detected, and printing is paused if "
+"the tag is not in predefined range."
 msgstr ""
 
 msgid "First Layer Inspection"
+msgstr ""
+
+msgid "Auto-recovery from step loss"
 msgstr ""
 
 msgid "Switch to per-object setting mode to edit modifier settings."
@@ -3291,7 +3320,7 @@ msgstr ""
 msgid "Remove last filament"
 msgstr ""
 
-msgid "Sync material list from AMS"
+msgid "Synchronize filament list from AMS"
 msgstr ""
 
 msgid "Set filaments to use"
@@ -4221,9 +4250,6 @@ msgstr "Support filament"
 
 msgid "Prime tower"
 msgstr "Prime torn"
-
-msgid "Flush options"
-msgstr "Rensnings alternativ"
 
 msgid "Special mode"
 msgstr "Special läge"
@@ -6927,8 +6953,8 @@ msgid ""
 "interface is Concentric"
 msgstr ""
 "Linje mönster för support gränssnittsytan .Standardmönstret för olösligt "
-"(material) support gränssnittet är Räta medan standardmönstret för "
-"lösligt(material) stödgränssnittet är koncentriskt"
+"(material) support gränssnittet är Räta medan standardmönstret för lösligt"
+"(material) stödgränssnittet är koncentriskt"
 
 msgid "Base pattern spacing"
 msgstr "Basens mönster mellanrum"
@@ -7494,6 +7520,26 @@ msgid ""
 "Set parameters for multiple objects\n"
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Stack objects]
+msgid ""
+"Stack objects\n"
+"Did you know that you can stack objects as a whole one?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Flush into support/objects/infill]
+msgid ""
+"Flush into support/objects/infill\n"
+"Did you know that you can save the wasted filament by flushing them into "
+"support/objects/infill during filament change?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Improve strength]
+msgid ""
+"Improve strength\n"
+"Did you know that you can use more wall loops and higher sparse infill "
+"density to improve the strength of the model?"
 msgstr ""
 
 #~ msgid "Filament N XX"
