--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-14 11:18+0800\n"
+"POT-Creation-Date: 2022-11-17 09:45+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -611,6 +611,9 @@ msgstr "Kitöltés"
 msgid "Support"
 msgstr "Támasz"
 
+msgid "Flush options"
+msgstr "Öblítési lehetőségek"
+
 msgid "Speed"
 msgstr "Sebesség"
 
@@ -1112,6 +1115,9 @@ msgstr "Több"
 msgid "Open Preferences."
 msgstr ""
 
+msgid "Open next tip."
+msgstr ""
+
 msgid "Open Documentation in web browser."
 msgstr ""
 
@@ -1502,6 +1508,9 @@ msgstr ""
 
 msgid "SN"
 msgstr "SN"
+
+msgid "Setting AMS slot information while printing is not supported"
+msgstr ""
 
 msgid "Confirm"
 msgstr "Megerősítés"
@@ -2491,15 +2500,15 @@ msgstr "Beállítás varázsló"
 msgid "Show Configuration Folder"
 msgstr "Konfigurációs mappa megjelenítése"
 
+msgid "Show Tip of the Day"
+msgstr ""
+
 msgid "Check for Update"
 msgstr "Frissítés keresése"
 
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&%s névjegye"
-
-msgid "Show Tip of the Day"
-msgstr ""
 
 msgid "Open Network Test"
 msgstr ""
@@ -2916,7 +2925,7 @@ msgstr ""
 msgid "No printers."
 msgstr "No printers."
 
-msgid "Not supported."
+msgid "Not supported by this model of printer!"
 msgstr ""
 
 msgid "Connecting..."
@@ -2931,6 +2940,12 @@ msgstr "Loading file list..."
 
 msgid "No files"
 msgstr "No files"
+
+msgid "Not accessible in LAN-only mode!"
+msgstr ""
+
+msgid "Missing LAN ip of printer!"
+msgstr ""
 
 #, c-format, boost-format
 msgid "File '%s' was lost! Please download it again."
@@ -3032,6 +3047,9 @@ msgstr ""
 
 msgid "Downloading..."
 msgstr "Letöltés..."
+
+msgid "Cloud Slicing..."
+msgstr ""
 
 msgid ""
 "Cannot read filament info: the filament is loaded to the tool head,please "
@@ -3247,13 +3265,24 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Alsó"
 
-msgid "Spaghetti and Excess Chute Pileup Detection"
+msgid "Enable AI monitoring of printing"
 msgstr ""
 
-msgid "Stop printing when Spaghetti or Excess Chute Pileup is detected"
+msgid "Sensitivity of pausing is"
+msgstr ""
+
+msgid "Enable detection of build plate position"
+msgstr ""
+
+msgid ""
+"The localization tag of build plate is detected, and printing is paused if "
+"the tag is not in predefined range."
 msgstr ""
 
 msgid "First Layer Inspection"
+msgstr ""
+
+msgid "Auto-recovery from step loss"
 msgstr ""
 
 msgid "Switch to per-object setting mode to edit modifier settings."
@@ -3326,7 +3355,7 @@ msgstr ""
 msgid "Remove last filament"
 msgstr ""
 
-msgid "Sync material list from AMS"
+msgid "Synchronize filament list from AMS"
 msgstr ""
 
 msgid "Set filaments to use"
@@ -4265,9 +4294,6 @@ msgstr "Filament a támaszhoz"
 
 msgid "Prime tower"
 msgstr "Törlő torony"
-
-msgid "Flush options"
-msgstr "Öblítési lehetőségek"
 
 msgid "Special mode"
 msgstr "Speciális mód"
@@ -7581,6 +7607,26 @@ msgid ""
 "Set parameters for multiple objects\n"
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Stack objects]
+msgid ""
+"Stack objects\n"
+"Did you know that you can stack objects as a whole one?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Flush into support/objects/infill]
+msgid ""
+"Flush into support/objects/infill\n"
+"Did you know that you can save the wasted filament by flushing them into "
+"support/objects/infill during filament change?"
+msgstr ""
+
+#: resources/data/hints.ini: [hint:Improve strength]
+msgid ""
+"Improve strength\n"
+"Did you know that you can use more wall loops and higher sparse infill "
+"density to improve the strength of the model?"
 msgstr ""
 
 #~ msgid "Filament N XX"
